ecmascript/parser/tests/test262-error-references/fail/d594faccae1187d7.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/d594faccae1187d7.js:1:10
  |
1 | ({ set s() { } })
  |          ^

